Fix blog post title overflowing page width

--- a/app/styles/blogpost.css
+++ b/app/styles/blogpost.css
@@ -18,9 +18,6 @@
   line-height: 1.4;
 }
 
-.BlogPost__Title__Wrapper {
-  width: 700px;
-}
 
 .BlogPost {
   max-width: 700px;
